crates/kaya/include/kaya.h

/**
 * Host capability bits, queryable any time. Platform-static per build:
 * the phones' systems own surface geometry, so KAYA_CAP_AUX_WINDOWS is
 * unset there and create_window is a deterministic scene error (DESIGN.md,
 * Presentation contexts). A LITERAL, because cbindgen turns this line into
 * the header's `#define` and one naming a Rust path is unreadable C; the
 * static assert under `kaya_capabilities` keeps it honest.
 */
#define KAYA_CAP_AUX_WINDOWS 1
/**
 * The occurrence ring's layout, for direct consumers.
 */
typedef struct KayaRingInfo {
  uint8_t *data;
  uint32_t capacity;
  uint32_t *head;
  uint32_t *tail;
} KayaRingInfo;
/**
 * The protocol fingerprint this core was built from. Bindings carry the
 * same value baked in at generation and assert agreement at load, so a
 * stale library and a fresh guest fail loudly at startup instead of
 * decoding each other's bytes as garbage.
 */
uint64_t kaya_spec_hash(void);
/**
 * The capability word, which is the SCENE CORE'S const and not a second
 * copy of its predicate: the wall that refuses `create_window` tests the
 * same bits this hands out (crates/kaya/src/scene.rs) — plus the runtime
 * bits the presentation layer granted.
 */
uint64_t kaya_capabilities(void);
/**
 * Take over the calling thread, which must be the process main thread,
 * and run the core. Returns when the app exits, with the exit code; the
 * host decides how to terminate its own process.
 */
int32_t kaya_run(void);
/**
 * Register bulk payload bytes and get the handle the next submitted
 * transaction references them by. One copy, into core-owned memory;
 * `len` is a usize — blob size is bounded by memory, never by any wire
 * or pump buffer, because the bytes never enter a record stream. The
 * handle is consumed by the next kaya_submit, referenced or not.
 */
uint64_t kaya_blob_register(const uint8_t *bytes, uintptr_t len);
/**
 * Open an asset by name and get the handle its bytes are held under.
 * `name` is a relative path under the asset root, spelled with `/`, as
 * UTF-8 of `name_len` bytes — not NUL-terminated. ZERO IS THE MISS, a
 * value rather than a panic, because a panic in an `extern "C"` frame is
 * an uncatchable abort (docs/traps.md); the BINDING raises with
 * `kaya_asset_why_not`'s sentence. No mode argument; each call reads.
 */
uint64_t kaya_asset_open(const uint8_t *name, uintptr_t name_len);
/**
 * An open asset's bytes. Returns the pointer and writes the length;
 * NULL for a handle already released or never minted. The pointer
 * borrows core memory and stays valid until `kaya_asset_release` —
 * copy, then release, exactly as the occurrence blob's contract says.
 */
const uint8_t *kaya_asset_bytes(uint64_t handle, uintptr_t *len);
/**
 * THE BLOB REDEMPTION: register this asset's bytes into the pending table
 * and get the handle a record will carry. The `Arc` is cloned, not the
 * bytes, which is what makes this different from `bytes()` plus
 * `kaya_blob_register`. The handle obeys the pending table's lifetime; 0
 * for a dead asset handle, so a redemption of something never opened
 * cannot register empty bytes that would sail through a lowering.
 */
uint64_t kaya_asset_blob(uint64_t handle);
/**
 * Drop an open asset. Idempotent: a handle already released, or never
 * minted, is a no-op rather than an error, so a binding's finalizer
 * needs no bookkeeping of its own.
 */
void kaya_asset_release(uint64_t handle);
/**
 * Why `kaya_asset_open(name)` would answer 0 — the whole sentence in UTF-8,
 * written into `out` and truncated to `cap`, returning the length it really
 * has so a caller can size a buffer and ask again. An EMPTY sentence
 * (return 0) means the asset resolves, which is what makes this total.
 * THE PROSE IS NOT WRITTEN HERE: crates/kaya/src/assets.rs's
 * `asset_why_not` is the one author, so a scene can freeze the bytes once.
 */
uintptr_t kaya_asset_why_not(const uint8_t *name, uintptr_t name_len, uint8_t *out, uintptr_t cap);
/**
 * Fetch the bytes an occurrence's blob value named. Returns the
 * pointer and writes the length; NULL for a handle already released.
 * The pointer borrows core memory and stays valid until
 * `kaya_occurrence_blob_release` — copy, then release.
 */
const uint8_t *kaya_occurrence_blob(uint64_t handle, uintptr_t *len);
/**
 * Drop an occurrence blob. Idempotent: a handle already released, or
 * never minted, is a no-op rather than an error, so a binding's
 * decode path needs no bookkeeping of its own.
 */
void kaya_occurrence_blob_release(uint64_t handle);
/**
 * Submit one transaction: `len` bytes of records at `records`, applied
 * atomically on the UI thread. The buffer is copied before this call
 * returns. Malformed records are a broken binding and fail loudly.
 * Blob references resolve against the pending registration table,
 * which drains at this boundary whether referenced or not.
 */
void kaya_submit(const uint8_t *records, uintptr_t len);
/**
 * Direct-access setup: the occurrence ring's memory layout. Pointers
 * remain valid for the life of the process.
 */
void kaya_occurrence_ring(struct KayaRingInfo *out);
/**
 * Redeem a handle for an open descriptor. THE ONE ENTRY HERE THAT IS SAFE
 * FROM ANY THREAD, alongside kaya_wake. Returns 0 on success and writes
 * `out_fd` plus `out_seekable`, the errno-shaped failure otherwise: the
 * open is FALLIBLE in ways the pick is not, since no picker lets you
 * request write. RESOLVE UNDER THE LOCK, RELEASE, THEN OPEN — holding it
 * across the open would serialize every concurrent open.
 */
int32_t kaya_open_picked(uint64_t handle,
                         uint32_t mode,
                         int64_t *out_handle,
                         uint32_t *out_seekable);